# context-bridge

./: .gitignore  AGENTS.md  CNAME  README.md  README_zh-CN.md  cbridge.py  config.yaml  index.html  main.py  metadata.json  package-lock.json  package.json  publish.sh  pyproject.toml  requirements.txt  setup.py  vite.config.ts
.github/workflows/: deploy.yml  publish.yml
assets/: index-0XbE58j6.css  index-55TTBnWZ.js  index-B7pisZHV.js  index-BRtMEhan.js  index-BWFOFr-H.css  index-BYylDXZM.js  index-C9KXVpU7.css  index-CIyaNbv1.js  index-Cg4kZ5oF.js  index-Doo1gbOj.js  index-GfeZJfpO.css
core/: __init__.py  api_server.py  config.py  factories.py  i18n.py  mcp_server.py  parser.py  repo_manager.py  watcher.py
core/interfaces/: context_manager.py  parser.py  search_runtime.py
core/managers/: openviking_manager.py
core/parsers/: composite_parser.py  docling_parser.py  markitdown_parser.py
core/runtimes/: qmd_runtime.py
core/utils/: chunk_strategy_manager.py  logger.py  model_downloader.py  process.py  search_optimizer.py  text_processor.py
docs/: openclaw_integration_en.md  openclaw_integration_zh.md  release-note.md  usage_en.md  usage_improvements.md  usage_zh.md
openclaw_skill/contextbridge/: SKILL.md
openclaw_skills/local-context-bridge/: SKILL.md
openclaw_skills/local-context-bridge-cn/: SKILL.md
skills/local-context-bridge/: SKILL.md  __init__.py  core_api_contract.py  environment.py  manifest.json  openclaw_adapter.py  openclaw_protocol.py  openclaw_server.py  setup.py  skill.py
src/: App.tsx  index.css
src/components/: Footer.tsx  (+1 more)
(+12 files in other folders)
